Pekko app: add JSON2